# profile-fastapi

./: .env  .pre-commit-config.yaml  README.md  docker-compose.yaml  profile.html  pyproject.toml
src/: app.py
src/entity/: transacao.py
src/infra/: config.py  eventos.py
src/infra/middleware/: profile_middleware.py
src/infra/repositorio/: entity.py  postgres_conexao.py
src/models/: transaction_model.py
src/repository/: repositorio_transacao.py
src/router/: router_transaction.py
src/service/: service_transacao.py
src/utils/: models_utils.py
