[tool.poetry]
name = "profile-fastapi"
version = "0.1.0"
description = ""
authors = ["Christian Lopes <christian.lima@ntendencia.com.br>"]
readme = "README.md"
packages = [{include = "profile_fastapi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.1"
pyinstrument = "^4.6.2"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
pytest-random-order = "^1.1.1"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
